packages/svelte/tests/validator/samples/snippet-whitespace-ok/input.svelte
<!-- prettier-ignore -->
{#snippet ok () }
	asd
{/snippet}
